feat: new activity page (#490)
Closes #451 
Closes #438 

This PR uses the features from the new `decentraland-dapps` transaction module to improve the information we display in the activity page:

<img width="727" alt="screen shot 2018-09-28 at 5 30 51 pm" src="https://user-images.githubusercontent.com/2781777/46232621-13ac8300-c346-11e8-982d-e613c035423b.png">

Transactions now display `Loading`, `Queued`, `Replaced` and `Dropped` statuses, with tooltip information and also the amount of confirmations with a circular progress bar (which has to reach 20 to be considered accepted).

# How to test 

The easiest way to test this is to edit a parcel name several times.

To force `Queued` transactions send a transaction with 0.1 Gwei and then a couple more with regular gas price.

To force `Failed` transactions click a bunch of times on the `Authorize the Marketplace to operate LAND on your behalf` checkbox in the settings page (without confirming the metamask popups) then confirm all the popups all at once (the first tx will work, the next ones will fail).

To force `Dropped` and `Replaced` transactions send a transaction with low gas price (0.1 Gwei) and after a minute metamask will let you replace it. You should see the transaction go from `Pending` to `Dropped` until the transaction is mined, then it should change to `Replaced` (after the 20 confirmations).

To force the `Loading` status send a transaction with a reaaaally low gas price (0.001 Gwei) it should stay loading for a while.

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -158,6 +158,7 @@
     "time_left": "Time left",
     "transfer_irreversible":
       "Remember that transferring is an irreversible operation.",
+    "unauthorized": "Unauthorized",
     "undo": "Undo",
     "wallet_address": "Wallet address",
     "website": "Website"
@@ -393,6 +394,11 @@
     "transfer": "You transfered {asset_type} {asset_link} to {owner_link}",
     "transfer_mana": "You transfered {mana} MANA to {address_link}"
   },
+  "transaction_confirmations": {
+    "count":
+      "{confirmations_count} {confirmations_count, plural, one {confirmation} other {confirmations}}",
+    "waiting": "Waiting for confirmations"
+  },
   "transaction_status": {
     "activity_page": "activity page",
     "idle": {
@@ -408,6 +414,25 @@
       "failed": "Your transaction failed, you can try sending a new one.",
       "pending": "The transaction is waiting to be confirmed."
     }
+  },
+  "transaction_tooltips": {
+    "dropped":
+      "This transaction has been dropped by the network. This could happen temporarily if you've sent a replacement transaction.",
+    "loading":
+      "Fetching transaction status. If this takes too long, you might need to send another transaction with higher gas.",
+    "queued":
+      "This transaction can't be processed yet because there is an earlier pending transaction",
+    "replaced":
+      "Another transaction with the same nonce as this one was mined instead"
+  },
+  "transaction_types": {
+    "confirmed": "Accepted",
+    "dropped": "Dropped",
+    "loading": "Loading",
+    "pending": "Pending",
+    "queued": "Queued",
+    "replaced": "Replaced",
+    "reverted": "Failed"
   },
   "transfer_estate": {
     "about_to_transfer": "You're about to transfer the estate {name}.",
