--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -13,6 +13,54 @@
   "address": {
     "its_you": "您的"
   },
+  "asset_buy": {
+    "about_to_buy": "您即将购买 {parcel_name}",
+    "allowed_balance": "你的津贴是{allowance}",
+    "buy_asset": "购买土地",
+    "buy_mana": "{click_here}购买一些 MANA。",
+    "didnt_allow": "您尚未授权使用MANA",
+    "didnt_allow_new_marketplace": "您尚未授权新版本的Marketplace使用MANA",
+    "needs_at_least": "为了购买这块土地，您至少需要 {mana} MANA。",
+    "please_allow":
+      "请转到{settings_link}并允许LegacyMarketplace合同代表您运行MANA",
+    "please_allow_new_marketplace":
+      "请转到{settings_link}并允许Marketplace合同代表您运行MANA",
+    "total_balance": "您的余额是 {balance}"
+  },
+  "asset_cancel": {
+    "about_to_cancel": "您即将取消出售 {parcel}。",
+    "cancel_sale": "取消销售",
+    "not_for_sale": "地块 {parcel} 不出售。"
+  },
+  "asset_detail": {
+    "actions": {
+      "cancel": "取消销售",
+      "permissions": "权限",
+      "sell": "卖",
+      "transfer": "转让"
+    },
+    "publication": {
+      "buy": "购买",
+      "price": "价钱"
+    }
+  },
+  "asset_publish": {
+    "already_sold": "这个LAND已经在{value}上发售",
+    "errors": {
+      "maximum_expiration": "最大到期日期为{date}",
+      "maximum_land_price": "最高LAND价格为{value} MANA",
+      "minimum_expiration": "最短到期日期为{date}",
+      "minimum_land_price": "最低LAND价格为{value} MANA"
+    },
+    "expiration": "呼气",
+    "expiration_placeholder": "本出版物的截止日期",
+    "list_asset": "列出{asset_name}待售",
+    "please_authorize":
+      "您需要转到{settings_link}并授权市场代表您运营LAND，然后才能在销售中列出它。",
+    "price": "价钱",
+    "price_placeholder": "这个{asset_name}的价格在MANA",
+    "set_asset_price": "设置{asset_name}的价格和到期日期。"
+  },
   "atlas": {
     "loading": "载入中",
     "no_owner": "无主地",
@@ -222,37 +270,18 @@
     "requested": "已申请",
     "required_deposit": "所需押金：{deposit}"
   },
+  "name": {
+    "estate": "房地产",
+    "parcel": "NT1"
+  },
   "parcel": {
     "no_description": "没有说明",
     "no_name": "无名",
     "view": "查看"
   },
-  "asset_buy": {
-    "about_to_buy": "您即将购买 {parcel_name}",
-    "allowed_balance": "你的津贴是{allowance}",
-    "buy_asset": "购买土地",
-    "buy_mana": "{click_here}购买一些 MANA。",
-    "didnt_allow": "您尚未授权使用MANA",
-    "didnt_allow_new_marketplace": "您尚未授权新版本的Marketplace使用MANA",
-    "needs_at_least": "为了购买这块土地，您至少需要 {mana} MANA。",
-    "please_allow":
-      "请转到{settings_link}并允许LegacyMarketplace合同代表您运行MANA",
-    "please_allow_new_marketplace":
-      "请转到{settings_link}并允许Marketplace合同代表您运行MANA",
-    "total_balance": "您的余额是 {balance}"
-  },
-  "asset_cancel": {
-    "about_to_cancel": "您即将取消出售 {parcel}。",
-    "cancel_land": "取消土地出售",
-    "not_for_sale": "地块 {parcel} 不出售。"
-  },
   "parcel_detail": {
     "actions": {
-      "cancel": "取消出售",
-      "create_estate": "创建连块土地",
-      "permissions": "权限",
-      "sell": "出售",
-      "transfer": "转让"
+      "create_estate": "创建连块土地"
     },
     "description": "描述",
     "empty_description": "这个地块没有描述",
@@ -271,9 +300,7 @@
       "part_of": "{name} 的一部分"
     },
     "publication": {
-      "buy": "购买",
-      "mortgage": "请求抵押",
-      "price": "价格"
+      "mortgage": "请求抵押"
     },
     "tags": {
       "title": "着重说明"
@@ -293,23 +320,6 @@
     "address_permission": "此地址将有权更新地块的内容。",
     "give_permission": "授权更新 {parcel_name} 上的内容。",
     "manage_land": "地块管理"
-  },
-  "parcel_publish": {
-    "already_sold": "这块虚拟土地已以 {value} 价格出售中",
-    "errors": {
-      "maximum_expiration": "截止日期是 {date}",
-      "maximum_land_price": "地块最高价是 {value} MANA",
-      "minimum_expiration": "最短有效期限为 {date}",
-      "minimum_land_price": "地块最低价是 {value} MANA"
-    },
-    "expiration": "到期时间",
-    "expiration_placeholder": "待售截止日期",
-    "list_land": "地块上架出售",
-    "please_authorize":
-      "您需要在设置页面{settings_link}授权委托虚拟市场以您的名义操作土地交易，然后才能将其上架出售。",
-    "price": "价格",
-    "price_placeholder": "此地块的 MANA 价格",
-    "set_land_price": "为 {parcel_name} 设置价格和截止日期"
   },
   "parcel_tags": {
     "adjacent": "路边",
