--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -398,7 +398,7 @@
   },
   "transaction_confirmations": {
     "count":
-      "{confirmations_count} {confirmations_count, plural, one {confirmación} otro {confirmaciones}}",
+      "{confirmations_count} {confirmations_count, plural, one {confirmación} other {confirmaciones}}",
     "waiting": "Esperando confirmaciones"
   },
   "transaction_status": {
